2003-04-12  Bernhard Held <bernhard@bernhardheld.de>

	* components/sdcc.mk: SDCC_DIR renamed to SDCC_HOME

2003-04-01  Bernhard Held <bernhard@bernhardheld.de>

	* lib/bootstrap.mk: `mv sdcpp sdcpp.exe` seems to be no longer necessary

2003-03-31  Bernhard Held <bernhard@bernhardheld.de>

	* usf-cf-alpha-linux-1.mk, usf-cf-sparc-linux-1.mk,
	usf-cf-x86-linux-1-i586-mingw32msvc.mk,
	usf-cf-x86-linux-1.mk: added 'MAKEJOBFLAGS = "-j 2"' to exploit the
	dual processors

2003-03-27  Bernhard Held <bernhard@bernhardheld.de>

	* support/error-filter.sh: suppress cvs lock messages
	* components/sdcc.mk: --target not required for configure (even if
	cross-compiling)

2003-03-18  Bernhard Held <bernhard@bernhardheld.de>

	* support/readme-snapshot.txt: fix links and added a link to online documentation
	* support/error-filter.sh: yacc's warning is no longer filtered

2003-03-11  Bernhard Held <bernhard@bernhardheld.de>

	* components/sdcc.mk: add first 100 lines of sdcc's ChangeLog to snapshot

2003-03-10  Bernhard Held <bernhard@bernhardheld.de>

	* lib/bootstrap.mk: first upload, then remove-old-versions, not vice versa

2003-03-03  Bernhard Held <bernhard@bernhardheld.de>

	* lib/bootstrap.mk: put logs in $(STAGINGBASE), so that they survive sdcc-build-bootstrap.sh
	* lib/variables.mk: put logs in $(STAGINGBASE), so that they survive sdcc-build-bootstrap.sh

2003-02-27  Bernhard Held <bernhard@bernhardheld.de>

	* lib/variables.mk: fix availability of $(HOSTNAME) on several CF platforms

2003-02-26  Bernhard Held <bernhard@bernhardheld.de>

	* lib/bootstrap.mk: delete snapshots versions, if there are more than 7 files in a single directory
	separate build.log files for different TARGETOS
	* lib/variables.mk: separate build-noise.log files for different TARGETOS
	* local/usf-cf-sparc-linux-1.mk: added
	* local/usf-cf-alpha-linux-1.mk: added

2003-02-24  Bernhard Held <bernhard@bernhardheld.de>

	* components/sdcc.mk: added mcs51-stack-auto to the regression tests